deploy/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cms-shop-api
spec:
  selector:
    app: cms-shop-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
