deploy/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cms-shop-api
  annotations:
    "cert-manager.io/cluster-issuer": "cf-teyvatsbyte-issuer-prod"
spec:
  rules:
    - host: shop-api.sellvat.com # Placeholder, will be patched in overlays
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cms-shop-api
                port:
                  number: 80
  tls:
    - hosts:
        - shop-api.sellvat.com
      secretName: tls-shop-api-sellvat-secret
